--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta name="viewport"
-  content="width=device-width, initial-scale=1.0"
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title> convocation day</title>
 <style>
 
@@ -40,7 +39,7 @@ section{
         margin-bottom: 10px;
         margin-left: 10px;
         padding: 20px ;
-        border-radius: 15px ;
+        border-radius: 15px ;}
       
 
 .ck{
@@ -49,7 +48,7 @@ section{
     position: relative;
     top: 0px;
     left: 290px;
-}}
+}
 
 table, th, td{
               border: 1px solid blue;
@@ -96,8 +95,7 @@ footer{
       <img src="eastc.png" style="width: 150px; height: 150px;" class="e-img"></div>  
 
 
-  <section 
-    div class="ck">
+  <section > <div class="ck">
        <h1 class="ck"> WELCOME TO THE 7<sup>th</sup> CONVOCATION MEETING 2024</h1></div>
        <p><strong>THEME:</strong> "Modernising data ecosystems to accelerate the implementation of African Continental Free Trade Area (AfCFTA). 
         The role of statistics and big data in the economic transformation and sustainable development in Tanzania"</p>
