--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ header{
 
 body::before {
   content: '';
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -35,7 +35,7 @@ body::before {
 }
 
 section{
-        background-color: rgba(49, 18, 185, 0.774);
+        background-color: rgba(51, 19, 185, 0.774);
         margin-bottom: 10px;
         margin-left: 10px;
         padding: 20px ;
